# Weekend-Devs

./: .env.example  .gitignore  CONTEXT.md  DEMO_LEARNERS.md  METRICS_EXPLANATION.md  README.md  SPEC_PERSON3.md  SPEC_TUTOR_ANALYTICS.md  compose.yaml  pranshul_ideas.md  run-dev.bat  run-dev.sh  setup.bat  setup.md  setup.sh  users.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  curriculum.py  database.py  flowwatch.py  guidance.py  learner.py  main.py  mastery.py  person3_models.py  person3_router.py  progress.py  question_bank.py  scoring.py  seed_learners.py  teacher.py  tutor.py  tutor_analytics_models.py  tutor_analytics_router.py
backend/prism_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_api.py  test_catalog_api.py  test_mastery.py  test_progress.py  test_scoring.py  test_teacher.py  test_tutor.py  tutor_analytics_fixtures.py
docs/: DEMO_LEARNERS.md  DEMO_SCRIPT.md  METRICS_EXPLANATION.md  PRISM_ARCHITECTURE_OBSERVATIONS.md  QA_CHECKLIST.md  setup.md
flowwatch-sidecar/: package-lock.json  package.json  sidecar.js
frontend/: ARCHITECTURE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.css  App.layout.test.ts  App.overview-cta.test.ts  App.skeleton.test.tsx  App.test.tsx  App.tsx  CatalogPage.test.tsx  SubjectPathPage.test.tsx
notes/: ONE_WEEK_PROTOTYPE_SCOPE.md  PRISM_ARCHITECTURE_OBSERVATIONS.md
tutor_analytics-person_3/: PRISM_Tutor_Analytics_Guide.md
(+57 files in other folders)
